<resources>
    <string name="app_name">Footprint Foods</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_image">User Image</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="address">Address</string>
    <string name="vouchers">Vouchers</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText">Saving the world one meal at time</string>
    <string name="logo">This is our Logo</string>
    <string name="market_button">Address • Town • Postcode</string>
    <string name="search_bar_text">Search</string>
    <string name="search_bar_market">Find a market</string>
    <string name="search_bar_order">Find an order</string>
    <string name="search_bar_calendar">Find a date</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="empty" />
    <string name="markets">Markets</string>
    <string name="marketDescription">The Farmers\' and Craft market is held on the second Wednesday of each month between 8am and 4pm. Due to the historic Loughborough Fair visiting the town in November, the date may change in that month.</string>
    <string name="calendar">Calendar</string>
    <string name="market">Market</string>
    <string name="image_of_market">Image of Market</string>
    <string name="back_button">Back button</string>
    <string name="image_of_produce">Image of Produce</string>
    <string name="market_card_image">image</string>
    <string name="market_card_title">title</string>
    <string name="market_card">title</string>
    <string name="product_card_image">image</string>
    <string name="image_of_product">Product Image</string>
    <string name="choose_a_farmer">Choose a Farmer</string>
    <string name="use_and_storage">Use and Storage</string>
    <string name="storage">Storage Information</string>
    <string name="description">Description</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="tab">\u0009</string>
    <string name="cart_total">Cart Total</string>
</resources>