<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".MarketActivity"
    >
    <!-- App Bar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/marketAppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        >
        <!-- Collapsing Toolbar -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/marketToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@color/white"
            app:titleEnabled="false"
            >
            <!-- Text and Buttons -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="top">
                <!-- ImageViews -->
                <ImageView
                    android:id="@+id/marketToolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/image_of_market"
                    android:src="@drawable/streetfood"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <androidx.cardview.widget.CardView
                    android:id="@+id/marketCardView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                    <ImageView
                        android:id="@+id/co2Image"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:contentDescription="@string/user_image"
                        app:srcCompat="@drawable/co2"
                        android:layout_gravity="center"
                        />
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/marketBackButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/back_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/white" />

                <!-- TextViews -->
                <TextView
                    android:id="@+id/marketToolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary2"
                    android:text="@string/market"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Headline5"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/marketToolbarImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/marketToolbarSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/orders"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Body1"
                    app:layout_constraintTop_toBottomOf="@id/marketToolbarTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <!-- Button -->
                <Button
                    android:id="@+id/marketToolbarButton"
                    style="@style/Widget.App.Button.OutlinedButton.SearchBar.Market"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:text="@string/market_button"
                    android:stateListAnimator="@null"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Body2"
                    app:icon="@drawable/ic_address"
                    app:layout_constraintTop_toBottomOf="@id/marketToolbarSubtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/marketToolbarDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="24dp"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:text="@string/test"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Body1"
                    app:layout_constraintTop_toBottomOf="@id/marketToolbarButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/marketTabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            app:tabContentStart="72dp"
            app:tabMode="scrollable" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/marketFrameLayout"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>