<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/productDetails"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ProductActivity"
    >
    <!-- App Bar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/productDetailsAppbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        >
        <!-- Collapsing Toolbar -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/productDetailsToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@android:color/transparent"
            app:titleEnabled="true"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:collapsedTitleTextAppearance="@style/TextAppearance.FootprintFoods.Headline6"
            >
            <ImageView
                android:id="@+id/productDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_of_product"
                />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/productDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>
    <!-- Frame Layout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productDetailsAppbarLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/productDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Headline5"
                    android:textStyle="bold"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/productDetailsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDescriptionTitle"
                    />

                <View
                    android:id="@+id/productDetailsDescriptionSpace"
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/defaultIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsDescription"
                    />

                <TextView
                    android:id="@+id/productDetailsFarmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Headline5"
                    android:textStyle="bold"
                    android:text="@string/choose_a_farmer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsDescriptionSpace"
                    />

                <LinearLayout
                    android:id="@+id/productDetailsRadioLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsFarmer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                    <RadioGroup
                        android:id="@+id/productDetailsFarmerRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="24dp"
                        />
                </LinearLayout>

                <View
                    android:id="@+id/productDetailsFarmerSpace"
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/defaultIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsRadioLayout"
                    />

                <TextView
                    android:id="@+id/productDetailsUsage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Headline5"
                    android:textStyle="bold"
                    android:text="@string/storage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsFarmerSpace"
                    />

                <TextView
                    android:id="@+id/productDetailsUsageDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsUsage"
                    />

                <View
                    android:id="@+id/productDetailsUsageSpace"
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/defaultIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsUsageDescription"
                    />

                <TextView
                    android:id="@+id/productDetailsTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.FootprintFoods.Headline5"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsUsageSpace"
                    />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/productDetailsQuantityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsTotalPrice"
                    >

                    <Button
                        android:id="@+id/productDetailsMinus"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly.Product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        app:icon="@drawable/ic_minus"
                        app:iconTint="@color/colorAccent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/productDetailsQuantityText"
                        />

                    <TextView
                        android:id="@+id/productDetailsQuantityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textAppearance="@style/TextAppearance.FootprintFoods.Headline4"
                        android:textSize="40sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <Button
                        android:id="@+id/productDetailsPlus"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly.Product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        app:icon="@drawable/ic_plus"
                        app:iconTint="@color/colorAccent"
                        app:layout_constraintStart_toEndOf="@id/productDetailsQuantityText"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/productDetailsAddToCart"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="46dp"
                    android:gravity="center"
                    android:text="@string/add_to_cart"
                    android:textSize="16sp"
                    android:backgroundTint="@color/colorAccent"
                    app:cornerRadius="8dp"
                    app:elevation="4dp"
                    app:layout_constraintTop_toBottomOf="@id/productDetailsQuantityLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:icon="@drawable/ic_add_to_cart"
                    app:iconPadding="16dp"
                    app:iconGravity="textStart"
                    style="@style/Widget.MaterialComponents.Button"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>